--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -20,9 +20,9 @@
     "typeRoots": ["node_modules/@types"],
     "types": ["node", "jest", "graphql"]
   },
-  "exclude": ["node_modules"],
-  "include": ["./typings/*.d.ts", "./**/*.tsx", "./**/*.ts"],
   "typeAcquisition": {
     "enable": false
-  }
+  },
+  "exclude": ["node_modules"],
+  "include": ["./typings/*.d.ts", "./**/*.tsx", "./**/*.ts"]
 }
